@startuml
set namespaceSeparator ::

class "flutter_provider_udemy::providers::product.dart::Product" {
  +String? id
  +String? title
  +String? description
  +double? price
  +String? imageUrl
  +bool isFavorite
  +void toggleFavoriteStatus()
}

"flutter::src::foundation::change_notifier.dart::ChangeNotifier" <|-- "flutter_provider_udemy::providers::product.dart::Product"

class "flutter_provider_udemy::providers::products.dart::Products" {
  -List<Product> _items
  +List<Product> items
  +List<Product> favoriteItems
  +Product findById()
  +void addProduct()
}

"flutter::src::foundation::change_notifier.dart::ChangeNotifier" <|-- "flutter_provider_udemy::providers::products.dart::Products"

class "flutter_provider_udemy::providers::orders.dart::OrderItem" {
  +String? id
  +double? amount
  +List<CartItem> product
  +DateTime dateTime
}

class "flutter_provider_udemy::providers::orders.dart::Orders" {
  -List<OrderItem> _order
  +List<OrderItem> orders
  +void addOrder()
}

"flutter::src::foundation::change_notifier.dart::ChangeNotifier" <|-- "flutter_provider_udemy::providers::orders.dart::Orders"

class "flutter_provider_udemy::providers::cart.dart::CartItem" {
  +String? id
  +String? title
  +int? quantity
  +double? price
}

class "flutter_provider_udemy::providers::cart.dart::Cart" {
  -Map<String, CartItem> _items
  +Map<String, CartItem> items
  +int itemCount
  +double totalAmount
  +void addItem()
  +void removeItem()
  +void clear()
}

"flutter::src::foundation::change_notifier.dart::ChangeNotifier" <|-- "flutter_provider_udemy::providers::cart.dart::Cart"

class "flutter_provider_udemy::screens::product_detail_Screen.dart::ProductDetaiilScreen" {
  {static} +String routeName
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "flutter_provider_udemy::screens::product_detail_Screen.dart::ProductDetaiilScreen"

class "flutter_provider_udemy::screens::cart_screen.dart::CartScreen" {
  {static} +String routeName
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "flutter_provider_udemy::screens::cart_screen.dart::CartScreen"

class "flutter_provider_udemy::screens::product_overview_screens.dart::ProductsOverviewScreen" {
  +_ProductsOverviewScreenState createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "flutter_provider_udemy::screens::product_overview_screens.dart::ProductsOverviewScreen"

class "flutter_provider_udemy::screens::product_overview_screens.dart::_ProductsOverviewScreenState" {
  -bool _showOnlyFavorites
  +Widget build()
}

"flutter::src::widgets::framework.dart::State" <|-- "flutter_provider_udemy::screens::product_overview_screens.dart::_ProductsOverviewScreenState"

class "flutter_provider_udemy::screens::product_overview_screens.dart::FilterOptions" {
  +int index
  {static} +List<FilterOptions> values
  {static} +FilterOptions Favorites
  {static} +FilterOptions All
}

"flutter_provider_udemy::screens::product_overview_screens.dart::FilterOptions" o-- "flutter_provider_udemy::screens::product_overview_screens.dart::FilterOptions"
"dart::core::Enum" <|-- "flutter_provider_udemy::screens::product_overview_screens.dart::FilterOptions"

class "flutter_provider_udemy::screens::order_screen.dart::OrderScreen" {
  {static} +String routeName
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "flutter_provider_udemy::screens::order_screen.dart::OrderScreen"

class "flutter_provider_udemy::main.dart::MyApp" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "flutter_provider_udemy::main.dart::MyApp"

class "flutter_provider_udemy::widgets::badge.dart::Badge" {
  +Widget child
  +String value
  +Color? color
  +Widget build()
}

"flutter_provider_udemy::widgets::badge.dart::Badge" o-- "flutter::src::widgets::framework.dart::Widget"
"flutter_provider_udemy::widgets::badge.dart::Badge" o-- "dart::ui::Color"
"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "flutter_provider_udemy::widgets::badge.dart::Badge"

class "flutter_provider_udemy::widgets::app_drawer.dart::AppDrawer" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "flutter_provider_udemy::widgets::app_drawer.dart::AppDrawer"

class "flutter_provider_udemy::widgets::product_item.dart::ProductItem" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "flutter_provider_udemy::widgets::product_item.dart::ProductItem"

class "flutter_provider_udemy::widgets::order_item.dart::OrderItem" {
  +OrderItem order
  +_OrderItemState createState()
}

"flutter_provider_udemy::widgets::order_item.dart::OrderItem" o-- "flutter_provider_udemy::providers::orders.dart::OrderItem"
"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "flutter_provider_udemy::widgets::order_item.dart::OrderItem"

class "flutter_provider_udemy::widgets::order_item.dart::_OrderItemState" {
  -bool _expanded
  +Widget build()
}

"flutter::src::widgets::framework.dart::State" <|-- "flutter_provider_udemy::widgets::order_item.dart::_OrderItemState"

class "flutter_provider_udemy::widgets::cart_item.dart::CartItem" {
  +String id
  +String productId
  +double price
  +int quantity
  +String title
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "flutter_provider_udemy::widgets::cart_item.dart::CartItem"

class "flutter_provider_udemy::widgets::products_grid.dart::ProductsGrid" {
  +bool showFavs
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "flutter_provider_udemy::widgets::products_grid.dart::ProductsGrid"


@enduml
